examples/test/testpolicy12119.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12119
  namespace: namespace243
spec:
  podSelector:
    matchLabels:
      key28: value5
      key40: value13
      key1: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value6
          key44: value18
      podSelector:
        matchLabels:
          key32: value27
          key14: value11
          key30: value36
